--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       <section></section>
       <section></section>
     </main>
-    <footer></footer>
+    <footer><h3 lang="eng">Address</h3></footer>
   </body>
 </html>
