--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Modern Bakery</title>
   </head>
   <body>
     <header>
       <nav>
         <!-- logo and menu-->
       </nav>
-      <!-- button -->
+      <button type="button">Request a call</button>
     </header>
     <main>
       <section>
