--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern Bakery</title>
+
+    <style>
+      h1 {
+        background-color: blueviolet;
+      }
+    </style>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <!-- logo and menu-->
+        <ul>
+          <li><a href="#traditions-section"> Our traditions</a></li>
+          <li><a href="#chefs-section"> Chefss</a></li>
+          <li><a href="#formats-section"> Formats</a></li>
+          <li><a href="#contact-section"> Contacts</a></li>
+        </ul>
       </nav>
       <button type="button">Request a call</button>
     </header>
     <main>
       <section>
-        <h1 lang="eng">Modern bakery</h1>
+        <h1 lang="eng" style="color: aqua">Modern bakery</h1>
       </section>
       <section>
         <h2 lang="eng">New format of traditions</h2>
