--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- logo and menu-->
         <ul>
           <li><a href="#traditions-section"> Our traditions</a></li>
-          <li><a href="#chefs-section"> Chefss</a></li>
+          <li><a href="#chefs-section"> Chefs</a></li>
           <li><a href="#formats-section"> Formats</a></li>
           <li><a href="#contact-section"> Contacts</a></li>
         </ul>
