--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern Bakery</title>
 
+    <!-- Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad+Guides&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Styles-->
     <style>
       h1 {
         background-color: blueviolet;
       }
     </style>
-
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Styles-->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
