images and text formatting

--- a/index.html
+++ b/index.html
@@ -37,10 +37,28 @@
     </header>
     <main>
       <section>
-        <h1 lang="eng" style="color: aqua">Modern bakery</h1>
+        <h1 class="hero-title"><span class="accent">Modern</span> bakery</h1>
       </section>
-      <section>
-        <h2 lang="eng">New format of traditions</h2>
+      <section id="traditions-section">
+        <ul class="advantages-list">
+          <li>Large demand on the market</li>
+          <li>Available Formats</li>
+          <li>Experienced team</li>
+        </ul>
+        <h2 class="section-title" lang="eng">New format of traditions</h2>
+        <p class="traditions-text">
+          <span>shop bakery</span> - this bakery has all the best and carries
+          the taste of taditional bakery and natural ingredients.
+        </p>
+        <p class="traditions-text">
+          We are working as well known chains
+          <span>5 minutes and the order is ready</span>. And our bakeries have
+          modern design and high level of service.
+        </p>
+        <img
+          src="./images/baker-man.jpg"
+          alt="male baker is looking at the bread"
+        />
       </section>
       <section>
         <h2 lang="eng">Our team</h2>
